// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FooterButton correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": null,
      "borderBottomWidth": null,
      "borderColor": "#007aff",
      "borderLeftWidth": null,
      "borderRadius": 5,
      "borderRightWidth": null,
      "borderTopWidth": null,
      "borderWidth": undefined,
      "elevation": 0,
      "flexDirection": "row",
      "height": 45,
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingBottom": 6,
      "paddingTop": 6,
      "shadowColor": null,
      "shadowOffset": null,
      "shadowOpacity": null,
      "shadowRadius": null,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Array [
          Object {
            "color": "#000",
            "fontSize": 30,
          },
          Object {
            "color": "#f4f4f4",
            "fontSize": 24,
            "marginLeft": 16,
            "marginRight": 0,
            "paddingTop": 2,
          },
        ],
        Object {
          "fontFamily": "Entypo",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
    type="Entypo"
  >
    
  </Text>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#f4f4f4",
          "fontFamily": "System",
          "fontSize": 22,
          "marginLeft": 0,
          "marginRight": 0,
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {
          "color": "rgba(255,255,255,0.70)",
          "fontSize": 16,
          "fontWeight": "bold",
        },
      ]
    }
    uppercase={false}
  >
    Button
  </Text>
</View>
`;

exports[`should render HeaderButton correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": null,
      "borderBottomWidth": null,
      "borderColor": "#007aff",
      "borderLeftWidth": null,
      "borderRadius": 5,
      "borderRightWidth": null,
      "borderTopWidth": null,
      "borderWidth": undefined,
      "elevation": 0,
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingBottom": 6,
      "paddingTop": 6,
      "shadowColor": null,
      "shadowOffset": null,
      "shadowOpacity": null,
      "shadowRadius": null,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Array [
          Object {
            "color": "#000",
            "fontSize": 30,
          },
          Object {
            "color": "#f4f4f4",
            "fontSize": 24,
            "marginLeft": 16,
            "marginRight": 0,
            "paddingTop": 2,
          },
        ],
        Object {
          "fontFamily": "Entypo",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
    type="Entypo"
  >
    
  </Text>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#f4f4f4",
          "fontFamily": "System",
          "fontSize": 22,
          "marginLeft": 0,
          "marginRight": 0,
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {
          "color": "rgba(255,255,255,1)",
          "fontWeight": "bold",
        },
      ]
    }
    uppercase={false}
  >
    Button
  </Text>
</View>
`;
